# holopy

./: .gitignore  README.md  pyproject.toml  pytest.ini  run_tests.py  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
examples/: README_PUNCH_ANALYSIS.md  README_coronal_heating.md  coronal_heating_analysis.py  download_punch_data.ps1  gravity_simulation.py  heliophysics_thomson_analysis.py  hydrogen_atom_example.py  photon_example.py  punch_heliophysics_analysis.py  visualization_demo.py
examples/punch_data/: punch_20220601_polarimetric.fits  punch_20220603_polarimetric.fits  punch_20220605_polarimetric.fits  punch_20220607_polarimetric.fits  punch_20220609_polarimetric.fits  punch_20220611_polarimetric.fits  punch_20220613_polarimetric.fits  punch_20220615_polarimetric.fits  punch_20220617_polarimetric.fits  punch_20220619_polarimetric.fits  punch_20220621_polarimetric.fits  punch_20220623_polarimetric.fits  punch_20220625_polarimetric.fits  punch_20220627_polarimetric.fits  punch_20220629_polarimetric.fits
holopy/: __init__.py
holopy/constants/: __init__.py  conversion_factors.py  dsqft_constants.py  e8_constants.py  physical_constants.py
holopy/cosmology/: __init__.py  cmb.py  early_universe.py  expansion.py  hubble_tension.py
holopy/dsqft/: __init__.py  atomic.py  causal_patch.py  correlation.py  coupling.py  dictionary.py  propagator.py  query.py  simulation.py  transport.py
holopy/e8/: __init__.py  heterotic.py  lattice.py  projections.py  root_system.py
holopy/gravity/: __init__.py  black_holes.py  einstein_field.py  emergent_metric.py  spacetime.py
holopy/info/: __init__.py  conservation.py  current.py  processing.py  tensor.py
holopy/io/: __init__.py  data_formats.py  exporters.py  importers.py
holopy/quantum/: __init__.py  decoherence.py  entanglement.py  measurement.py  modified_schrodinger.py
holopy/tests/: __init__.py  conftest.py
holopy/tests/integration/: io_integration_tests.py  test_dsqft_simulation.py  test_photon_simulation.py
holopy/tests/integration/gravity/: __init__.py  gravity_integration_tests.py
holopy/tests/regression/: io_regression_tests.py  test_dsqft_regression.py
holopy/tests/unit/: __init__.py  test_correlation_function.py  test_growth.py  test_sound_horizon.py
holopy/tests/unit/constants/: __init__.py  test_conversion_factors.py  test_physical_constants.py
holopy/tests/unit/cosmology/: __init__.py  test_expansion.py
holopy/tests/unit/dsqft/: test_bulk_three_point.py  test_cmb_spectrum.py  (+6 more)
holopy/utils/: __init__.py  logging.py  math_utils.py  tensor_utils.py  visualization.py
knowledge/: CMB_Calculations.tex  dsqft_correspondence.tex  holographic_gravity.tex  holopy_constants_and_equations.md  holopy_design_document.md  holopy_development_context.md
(+24 files in other folders)
