[build-system]
requires = ["setuptools>=64.0.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "holopy"
version = "0.1.0 alpha"
authors = [
    {name = "Bryce Weiner", email = "bryce.physics@gmail.com"},
]
description = "A Python Library for Holographic Cosmology and Holographic Gravity Simulations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "astropy>=5.0.0",
    "h5py>=3.6.0",
    "tqdm>=4.62.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=21.7b0",
    "isort>=5.9.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=0.5.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=0.5.0",
    "nbsphinx>=0.8.0",
    "ipython>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/bryceweiner/holopy"
Documentation = "https://holopy.readthedocs.io"
Repository = "https://github.com/bryceweiner/holopy.git"
Bug Tracker = "https://github.com/bryceweiner/holopy/issues"
Changelog = "https://github.com/bryceweiner/holopy/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["holopy"]

[tool.setuptools_scm]
write_to = "holopy/_version.py"
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=holopy --cov-report=term-missing"
testpaths = ["tests"] 